--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile('com.h2database:h2')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
