--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 jdk:
   - openjdk8
 
+before_install:
+  - chmod +x gradlew
+
 branches:
   only:
     - master
@@ -18,4 +21,4 @@ script: "./gradlew clean build"
 notifications:
   email:
     recipients:
-      - 'subinpark.re@gmail.com'
+      - subinpark.re@gmail.com
