--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 before_deploy:
   - zip -r springboot2-webservice *
   - mkdir -p deploy
-  - mv springboot2-webservice.zip deploy/springboot2-webservice
+  - mv springboot2-webservice.zip deploy/springboot2-webservice.zip
 
 deploy:
   - provider: s3
