codedeploy 설정 파일 추가 travis 설정 파일 수정

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,17 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: sublog-springboot-build
+    key: springboot2-webservice.zip
+    bundle-type: zip
+    application: springboot2-webservice
+    deployment_group: springboot2-webservice-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
