--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,14 @@ before_install:
   - chmod +x gradlew
 
 before_deploy:
+  - mkdir -p before-deploy
+  - cp scrips/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip depoly/springboot2-webservice.zip
+
   - zip -r springboot2-webservice *
   - mkdir -p deploy
   - mv springboot2-webservice.zip deploy/springboot2-webservice.zip
